--- a/src/components/navigation/MegaMenu/MegaMenu.module.scss
+++ b/src/components/navigation/MegaMenu/MegaMenu.module.scss
@@ -99,7 +99,7 @@
   top: 100%;
   left: 0;
   right: 0;
-  z-index: $z-index-dropdown;
+  z-index: $z-index-modal-backdrop;
   display: flex;
   justify-content: center;
   background: var(--gs-bg-card);
